<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="back">Назад</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="support">Обратиться в техподдержку</string>
    <string name="terms">Пользовательское соглашение</string>

    <string name="support_email">eugeniy777@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_terms_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_send_error">Не найдено подходящего приложения</string>
    <string name="settings_not_found_app">Не найдено подходящих приложений</string>

    <string name="trackArt">Обложка</string>
    <string name="middleDot">Разделитель</string>
    <string name="more">Больше</string>
    <string name="clear_search_form">Очистить строку поиска</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="check_internet_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history_q">Очистить историю?</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear">Очистить</string>
    <string name="history_was_clear">История очищена</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="play">Воспроизвести</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="_00_00">00:00</string>

    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="medialibrary_empty">Ваша медиатека пуста</string>

    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="error">Ошибка %d</string>

    <string name="playlist_name">Название *</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_delete_q">Хотите удалить плейлист?</string>
    <string name="playlist_deleted">Плейлист удален</string>
    <string name="add_image">Добавить картинку</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_image">Обложка плейлиста</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>

    <string name="delete_track">Удалить трек</string>
    <string name="delete">Удалить</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_is_empty">В этом плейлисте нет треков</string>
    <string name="playlist_is_empty_for_share">В данном плейлисте нет списка треков, которым можно поделиться</string>

    <plurals name="plural_count_tracks">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plural_minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>