<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical"
    tools:context=".settings.presentation.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="24dp">

        <TextView
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/settings" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SettingsButtonText"
        android:paddingEnd="8dp"
        android:text="@string/dark_theme"
        android:thumbTint="@color/switch_color"
        android:trackTint="@color/switch_color"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/buttonSharing"
        style="@style/SettingsButtonText"
        android:text="@string/share_app"
        app:icon="@drawable/ic_share" />

    <Button
        android:id="@+id/buttonSupport"
        style="@style/SettingsButtonText"
        android:text="@string/support"
        app:icon="@drawable/ic_support" />

    <Button
        android:id="@+id/buttonTerms"
        style="@style/SettingsButtonText"
        android:text="@string/terms"
        app:icon="@drawable/ic_chevron_right" />
</LinearLayout>