<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_screen_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingBottom="28dp"
    android:paddingTop="16dp">

    <TextView style="@style/Header"
        android:text="@string/title"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_from_header"
        />


    <Button style="@style/MainButtonStyle"
        android:id="@+id/button_search"
        android:layout_marginTop="@dimen/main_button_margin_from_button"
        android:text="@string/search"
        app:icon="@drawable/icon_search"
        android:letterSpacing="0"
        />

    <Button style="@style/MainButtonStyle"
        android:id="@+id/button_media_library"
        android:text="@string/media_library"
        app:icon="@drawable/icon_media_library"
        />

    <Button style="@style/MainButtonStyle"
        android:id="@+id/button_settings"
        android:text="@string/settings"
        app:icon="@drawable/icon_settings"
        />
</LinearLayout>