<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_from_top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_to_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_from_start"
            android:contentDescription="@string/back"
            android:foreground="?attr/selectableItemBackground"
            android:padding="7dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/settings"
            android:textColor="@color/settings_text_color"
            android:textSize="@dimen/header_text_size" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_from_header"
        android:paddingStart="@dimen/margin_from_start"
        android:paddingTop="@dimen/settings_button_padding_top"
        android:paddingBottom="@dimen/settings_button_padding_bottom"
        android:paddingEnd="7dp"

        android:text="@string/dark_theme"
        android:textColor="@color/settings_text_color"
        android:textAppearance="@style/settings_button_text"

        android:foreground="?attr/selectableItemBackground"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:paddingTop="@dimen/settings_button_padding_top"
        android:paddingBottom="@dimen/settings_button_padding_bottom"
        android:paddingStart="@dimen/settings_button_padding_start"
        android:paddingEnd="@dimen/settings_button_padding_end"

        android:text="@string/share"
        android:textColor="@color/settings_text_color"
        android:textAppearance="@style/settings_button_text"

        app:icon="@drawable/icon_share"
        app:iconGravity="end"
        app:iconTint="@color/settings_text_color"

        style="?android:attr/borderlessButtonStyle"
        android:foreground="?attr/selectableItemBackground" />

    <Button
        android:id="@+id/button_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:paddingTop="@dimen/settings_button_padding_top"
        android:paddingBottom="@dimen/settings_button_padding_bottom"
        android:paddingStart="@dimen/settings_button_padding_start"
        android:paddingEnd="@dimen/settings_button_padding_end"

        android:text="@string/support"
        android:textColor="@color/settings_text_color"
        android:textAppearance="@style/settings_button_text"

        app:icon="@drawable/icon_support"
        app:iconGravity="end"
        app:iconTint="@color/settings_text_color"

        style="?android:attr/borderlessButtonStyle"
        android:foreground="?attr/selectableItemBackground" />

    <Button
        android:id="@+id/button_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:paddingTop="@dimen/settings_button_padding_top"
        android:paddingBottom="@dimen/settings_button_padding_bottom"
        android:paddingStart="@dimen/settings_button_padding_start"
        android:paddingEnd="22dp"

        android:text="@string/terms"
        android:textColor="@color/settings_text_color"
        android:textAppearance="@style/settings_button_text"

        app:icon="@drawable/icon_terms"
        app:iconGravity="end"
        app:iconTint="@color/settings_text_color"

        style="?android:attr/borderlessButtonStyle"
        android:foreground="?attr/selectableItemBackground" />
</LinearLayout>