<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="24dp">

        <TextView
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/search" />

    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_from_header"
        android:paddingHorizontal="@dimen/padding_horizontal">

        <EditText
            android:id="@+id/inputSearchForm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints="username"
            android:background="@drawable/rounded_edittext_backgroud"
            android:drawableStart="@drawable/ic_search_form"
            android:drawablePadding="8dp"
            android:drawableTint="@color/search_form_text_hint_color"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="255"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="32dp"
            android:singleLine="true"
            android:textColor="@color/search_form_text_color"
            android:textColorHint="@color/search_form_text_hint_color" />

        <ImageView
            android:id="@+id/clear_search_form_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:contentDescription="@string/clear_search_form"
            android:padding="18dp"
            android:src="@drawable/ic_clear"
            app:tint="@color/search_form_text_hint_color" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="148dp"
            android:indeterminateTint="@color/progress_bar"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_track" />

        <LinearLayout
            android:id="@+id/youSearched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/TextPlaceholder"
                android:layout_marginBottom="12dp"
                android:text="@string/you_searched" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTracksHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_track" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearHistoryButton"
                style="@style/Button"
                android:layout_marginBottom="20dp"
                android:text="@string/clear_history"
                app:cornerRadius="54dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/placeholderNotFound"
            style="@style/TextPlaceholder"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:drawablePadding="15dp"
            android:text="@string/nothing_was_found"
            android:textColor="@color/text_color_primary"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/ic_not_found" />

        <LinearLayout
            android:id="@+id/placeholderError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/connection_problem"
                android:src="@drawable/ic_network_error" />

            <TextView
                style="@style/TextPlaceholder"
                android:text="@string/connection_problem" />

            <TextView
                android:id="@+id/errorText"
                style="@style/TextPlaceholder"
                android:layout_marginTop="20dp"
                android:text="@string/check_internet_connection" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/errorButton"
                style="@style/Button"
                android:text="@string/refresh"
                app:cornerRadius="54dp" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>