<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medialibrary.presentation.playlists.AddPlayListFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/text_color_primary"
        app:title="@string/new_playlist" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="82dp"
        android:src="@drawable/add_image_button"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playListNameTextInputLayout"
        style="@style/PlayListCreateTextInputLayout"
        android:hint="@string/playlist_name"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/addImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playListNameEditText"
            style="@style/PlayListCreateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playListDescriptionTextInputLayout"
        style="@style/PlayListCreateTextInputLayout"
        android:hint="@string/playlist_description"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/playListNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playListDescriptionEditText"
            style="@style/PlayListCreateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:enabled="false"
        android:id="@+id/playListCreateButton"
        style="@style/PlayListCreateButton"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="32dp"
        android:text="@string/playlist_create"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder" />


</androidx.constraintlayout.widget.ConstraintLayout>